--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>taobao jquery js lephy</title>
+    <title>test the Taobao by waby</title>
     <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
@@ -15,7 +15,7 @@
         <div class="top-info">
             <div class="top-left">
                 <div data-toggle="arrowdown" id="arrow1" class="user-name">
-                    <a href="#">天之狼2011</a>
+                    <a href="#">Waby</a>
                     <span class="down-icon"></span>
                 </div>
                 <div data-toggle="arrowdown" id="arrow2" class="msg-info">
