fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <h1 style="padding-left:5%">Benyou Wang</h1>
     <div class="main">
-	<a href="https://www.tencent.com/zh-cn/index.html" target="_blank">@ Tencent</a> | <a href="https://scholar.google.com/citations?user=Jk4vJU8AAAAJ&hl=zh-CN" target="_blank">@ google scholar link</a>
+	<a href="https://www.tencent.com/zh-cn/index.html" target="_blank">@ Tencent</a> 
 	</div>
     <div style="height:15px"></div>
     <div class="main">    
@@ -75,7 +75,7 @@
 	<h3>Journals</h3>
 	<ol>
 	<li class="pub">Li Jinfei. Wu Yue, Zhang Peng, Song Dawei, <b>Wang Benyou</b>. Learning to diversify web search results with a Document Repulsion Model. <b>Information Sciences</b>, 411, 136-150. 2017. (factor : 4.832)</li>
-	<li class="pub">Zhang Shengnan, Hou Yuexian, <b>Wang Benyou</b>, Song Dawei.  Regularizing Neural Networks via Retaining Confident Connections. <b>Entropy 1</b>, 19(7), 313. 2017. (factor : 1.821</b>)</li>
+	<li class="pub">Zhang Shengnan, Hou Yuexian, <b>Wang Benyou</b>, Song Dawei.  Regularizing Neural Networks via Retaining Confident Connections. <b>Entropy </b>, 19(7), 313. 2017. (factor : 1.821</b>)</li>
 	<li class="pub"><b>Wang Benyou</b>, Zhang Peng, Li Jinfei, Song Dawei, Hou Yuexian,  Shang Zhenguo.  Exploration of quantum interference in document relevance judgement discrepancy. <b>Entropy</b> , 18(4), 144. 2016. (factor : 1.821</b>)</li>
 	<li class="pub">Zhang Peng, Li Jinfei, <b>Wang Benyou</b>, Zhao Xiaochao, Song Dawei, Hou Yuexian, Melucci, M.  A Quantum Query Expansion Approach for Session Search. <b>Entropy</b> , 18(4), 146.2016.  (factor : 1.821</b>)</li>
 
