fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
 	<li class="pub"> Mr. Zhang Yazhou, Tianjin University.</li>
 	<li class="pub"> Mr. Niu jiabing, Tianjin University.</li>
 	<li class="pub"> Mr. Su Zhan, Tianjin University.</li>
-	<li class="pub"> Mr. Tao Shuchang, Tianjin University.</li>
+	<li class="pub"> Miss. Tao Shuchang, Tianjin University.</li>
 	<li class="pub"> Mr. Shang Zhenguo, Tianjin University.</li>
 	<li class="pub"> Mr. Zhang Lipeng, Tianjin University.</li>
 	<li class="pub"> Mr. Ma Liqun, Tianjin University.</li>
 	<li class="pub"> Mr. Niu jiabing, Tianjin University.</li>
 	<li class="pub"> Miss. Zhang Yuhua, Tianjin University.</li>
-	<li class="pub"> Dr. Zhang Allen, Tencent</li>
+	<li class="pub"> Dr. Zhai Allen, Tencent</li>
 	<li class="pub"> Mr. Zhao Andy, Tencent</li>
 	<li class="pub"> Dr. Gao Yongqiang, Tencent Youtu</li>
 	<li class="pub"> <a href="http://minyang.me/"> Dr. Yang Min </a>, CAS</li>
