fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     Benyou's research interests include (but not limited) information retrieval, natural language processing , machine learning and quantum mechanics. He is now working on many textual problems, models, algorithms and innovations. Particularly,
     <ul>
 
-    <li class="pub">Deep Learning for NLP (e.g. Question Answering, Image caption, Word Similarity, Sematic matching)</li>
+    <li class="pub">Deep Learning for NLP (e.g. Question Answering, Image caption)</li>
 	<li class="pub">Information Retrieval (e.g. Query Expansion, Recomendation System, Session Search)</li>
 	<li class="pub">Quantum inspired Models in Language (e.g. Quantum language model)</li>
 
@@ -36,7 +36,7 @@
 	
 	<div style="height:5px"></div>
     <div class="main">
-    My work on question answering and query wxpansion has been part of many Tencent products and services, including Tencent Cloud, Tencent HR customer service. And some work about Q-zone short vedio stream Recomendation  will be deployed latter.
+    My work on question answering and query expansion has been part of many Tencent products and services, including Tencent Cloud, Tencent HR customer service. And some work about Q-zone short vedio stream Recomendation  will be deployed latter.
     </div>
     
     <div style="height:2px"></div>
