with current work

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
     <div class="main">
     My work on question answering and query expansion has been part of many Tencent products and services, including Tencent Cloud, Tencent HR customer service. And some work about Q-zone short vedio stream Recomendation  will be deployed latter.
     </div>
+    <br/>
+
+    <div class="main">
+    		Recently, we try to use extra CCG syntax information for image caption. Before this we have tried  joint task of image caption and machine translation in a cross-language, in which  decoder is shared  while differs in encoder-side (image or a cross language).
+    </div>
     
     <div style="height:2px"></div>
     <h3 style="padding-left:5%">News</h3>
