--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="main">
     <ul>
     <li style="color:black; font-size:14pt; padding-bottom:5px">Please send me emails (wabywang@tencent.com)  if you are interested in my work.</li>
-    
+    <li>Our new book will be published by <a href="http://www.tup.tsinghua.edu.cn/index.html"> Tsinghua University Press </a> next year</li>
     <li style="color:red"> Our  paper <b> End-to-End Quantum-like Language Models with Application to Question Answering </b> has been accepted by <a href="https://aaai.org/Conferences/AAAI-18/" target="_blank"> AAAI 2018. </a> </li>
     <li style="color:black">Our oral paper <a href="https://aaai.org/Conferences/AAAI-18/"> <b> IRGAN: A Minimax Game for Unifying Generative and Discriminative Information Retrieval Models </b> </a> won <a href="http://sigir.org/sigir2017/program/awards/"> <b> Best Paper Award Honourable Mentions  </b> </a> in  <a href="http://sigir.org/sigir2017/"> SIGIR 2017 </a></li>
 
@@ -138,48 +138,8 @@
     </ol>
 
 
-    <h3>MaraThon</h3>
- <!--    <div class="main"> -->
-	<ol>	
-	<li class="pub"> Tianjin, China, Half-MaraThon 2014 </li>
-	<li class="pub"> Tianjin, Chian, Half-MaraThon2015 </li>
-	<li class="pub"> Qinghuangdao, Hebei, China, Half-MaraThon 2015 </li>
-	<li class="pub"> Tianjin, China, Half-MaraThon 2016 </li>
-	<li class="pub"> Hengshuihu, Hubei,China, Full-MaraThon 2016 </li>
-	<li class="pub"> Nanshan, Shenzhen, Guangdong, China, Half-MaraThon 2017 </li>
-    </ol>
-
-
-
-    <h3>Co-worker</h3>
- <!--    <div class="main"> -->
-	<ol>
-	<li class="pub"> Dr. Li Jinfei , Tianjin University.</li>
-	<li class="pub"> Dr. Zhao Xiaochao , Tianjin University.</li>
-	<li class="pub"> Mr. Chen Yongqiang , Tianjin University.</li>
-	<li class="pub"> Miss. Zhang Shengnan , Tianjin University.</li>
-	<li class="pub"> Miss. Niu Xiaolei, Tianjin University.</li>
-	<li class="pub"> Mr. Wang Tianshu, Tianjin University.</li>
-	<li class="pub"> Mr. Zhang Yazhou, Tianjin University.</li>
-	<li class="pub"> Mr. Niu jiabing, Tianjin University.</li>
-	<li class="pub"> Mr. Su Zhan, Tianjin University.</li>
-	<li class="pub"> Miss. Tao Shuchang, Tianjin University.</li>
-	<li class="pub"> Mr. Shang Zhenguo, Tianjin University.</li>
-	<li class="pub"> Mr. Zhang Lipeng, Tianjin University.</li>
-	<li class="pub"> Mr. Ma Liqun, Tianjin University.</li>
-	<li class="pub"> Mr. Niu jiabing, Tianjin University.</li>
-	<li class="pub"> Miss. Zhang Yuhua, Tianjin University.</li>
-	<li class="pub"> Dr. Zhai Allen, Tencent</li>
-	<li class="pub"> Mr. Zhao Andy, Tencent</li>
-	<li class="pub"> Dr. Gao Yongqiang, Tencent Youtu</li>
-	<li class="pub"> <a href="http://minyang.me/"> Dr. Yang Min </a>, CAS</li>
-	
-    </ol>
-
-
-
-    </div>
-    <p>Thanks for your reading</p>
+   
+    <p>Thanks for your reading, for more information <a href="life.html">here </a></p>
     
   </body>
 </html>
