transfer the social service to the life.index

--- a/life.html
+++ b/life.html
@@ -59,6 +59,17 @@
 	
     </ol>
 
+
+    <h3>Social Volunteer Service</h3>
+ <!--    <div class="main"> -->
+	<ol>	
+	<li class="pub"> Served as a  <b>volunteer teacher </b> for a whole year for ChunLei Volunteer Teaching  Program in Shiyan City, Hubei Province, China. At least 150 hours for volunteer service in 2010-2011</a> </li>
+	<li class="pub"> Served as a  conference volunteer for <a href="http://wd600.10yan.com/">  Wudang  600th Anniversary Celebration. </a> </li>
+	<li class="pub"> A member of the Second Youth Volunteer Organization in <a href="http://www.hbshgzx.com/"> Huanggang Middle School. </a> </li>
+    </ol>
+
+
+
     <br/><br/>
     <p>Thanks for your reading, for main information <a href="index.html">here </a></p>
     </div>
