--- a/index.html
+++ b/index.html
@@ -108,7 +108,17 @@
 	</ol>	
     <!-- </div> -->
 
-    
+  
+     <h3 >Invited Talks</h3>
+<!--  <div class="main"> -->
+  <ol>
+  <li class="pub"> <a href="talks/chatbot.pdf"> ChatBot in DSNO </a> : Apartment of product for instant communication,  SNG, Tencent  </li>
+  <li class="pub"><a href="talks/quantumqa.pdf"> Quanum Language Model for QA </a> : Quantum Penguin, Tencent </li>  
+    </ol>
+    <!-- </div> -->
+
+
+
     <h3 >Industrial Projects</h3>
 <!-- 	<div class="main"> -->
 	<ol>
