--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <h3 >Industrial Projects</h3>
 <!-- 	<div class="main"> -->
 	<ol>
-	<li class="pub"> <a href="https://cloud.tencent.com/product/csr?idx=1"> AI chatbot: Customer Service Robot </a> in Tencent Cloud. 2017.</li>
+	<li class="pub"> <a href="https://cloud.tencent.com/product/xiaowei"> AI chatbot: Customer Service Robot </a> in Tencent Cloud. 2017.</li>
 	<li class="pub">Modelling short-term interset user-profile for <a href="https://qzone.qq.com/"> Qzone short </a> vedio recomendation.</li>	
     </ol>
     <!-- </div> -->
@@ -136,8 +136,20 @@
 	<li class="pub"> General document-based Question Answering, CNN/RNN with Attention and positional embedding. <a href="https://github.com/shuishen112/pairwise-rnn"> code</a></li>
 	</ol>
 	<!-- </div> -->
-    
+   
+  <h3>Related Project</h3>
+  <ol> 
+  <li>
+   Quantum Information Access and Retrieval Theory (QUARTZ),1/2017 - 12/2020, EU Horizon 2020 Marie-Curie H2020 Innovative Training Network (ITN)
+  </li>
+  <li>
+  大数据和社会场景下的互动语言意图深度理解基础理论和关键技术研究 2017- 自然科学基金－通用技术基础研究联合基金重点项目
+  </li>
+  <li> Research on quantum-like language modeling in the interactive language scenario, 2018/01-2021/12. Natural Science Foundation of China, No. 61772363</li>
+  <li> 中国方言区英语学习者语音习得机制的跨学科研究, 2015-2020年, 国家社科基金重大招标项目（编号：15ZDB103）</li>
+  <li> Exploratory Search: Dynamic Relevance Modeling, 2014/01-2016/12. Research Fund for Doctoral Program of Higher Education of china, No. 20130032120044</li>
 
+  </ol>
 
 
    
