--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
   <body>
     <h1 style="padding-left:5%">Benyou Wang</h1>
     <div class="main">
-	<a href="https://www.tencent.com/zh-cn/index.html" target="_blank">@ Tencent</a> 
-	</div>
+	      <a href="https://scholar.google.com/citations?user=Jk4vJU8AAAAJ&hl=zh-CN" target="_blank">@ Google Scholar</a> 
+        &nbsp;&nbsp; &nbsp;   <a href="blogs.md" target="_blank">@ Blogs</a>  
+        &nbsp;&nbsp; &nbsp; <a href="https://www.tencent.com/zh-cn/index.html" target="_blank">@ Tencent</a> 
+	  </div>
     <div style="height:15px"></div>
     <div class="main">    
     Benyou Wang is a Research Associate in <a href="https://www.tencent.com/zh-cn/index.html" target="_blank">Tencent</a> Shenzhen, China. Before joining Tencent in July. 2017, he has been a Research Assisstant at Tianjin University since Feb. 2017. Benyou received his Master degree in Feb. 2017 from School of Computer Science  and technology of Tianjin University, supervides by Professor <a href="http://www.open.ac.uk/people/ds7946">  Dawei Song </a> and  Doctor <a href="">  Peng Zhang </a>. Before that, he received a B.Sc degree from the huat in 2014. 
@@ -50,6 +52,7 @@
     <div class="main">
     <ul>
     <li style="color:black; font-size:14pt; padding-bottom:5px">Please send me emails (wabywang@tencent.com)  if you are interested in my work.</li>
+    <li >We tries to build a general <a href="https://github.com/wabyking/TextClassificationBenchmark"> benchmark </a> for <b> text classficaion in Pytorch </b>. This benchmark is avaiable for CPU/GPU, Python2/Python3 and Pytorch 0.2/0.3. IMDB/TREC/SST dataset have been  verified, and more dataset is expected. Welcome for any issues and contribution, please contact me. </li>
     <li>Our new book will be published by <a href="http://www.tup.tsinghua.edu.cn/index.html"> Tsinghua University Press </a> next year</li>
     <li style="color:red"> Our  paper <b> End-to-End Quantum-like Language Models with Application to Question Answering </b> has been accepted by <a href="https://aaai.org/Conferences/AAAI-18/" target="_blank"> AAAI 2018. </a> </li>
     <li style="color:black">Our oral paper <a href="https://aaai.org/Conferences/AAAI-18/"> <b> IRGAN: A Minimax Game for Unifying Generative and Discriminative Information Retrieval Models </b> </a> won <a href="http://sigir.org/sigir2017/program/awards/"> <b> Best Paper Award Honourable Mentions  </b> </a> in  <a href="http://sigir.org/sigir2017/"> SIGIR 2017 </a></li>
