--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1 style="padding-left:5%">Benyou Wang</h1>
     <div class="main">
 	      <a href="https://scholar.google.com/citations?user=Jk4vJU8AAAAJ&hl=zh-CN" target="_blank">@ Google Scholar</a> 
-        &nbsp;&nbsp; &nbsp;   <a href="blogs.md" target="_blank">@ Blogs</a>  
+        &nbsp;&nbsp; &nbsp;   <a href="blogs.html" target="_blank">@ Blogs</a>  
         &nbsp;&nbsp; &nbsp; <a href="https://www.tencent.com/zh-cn/index.html" target="_blank">@ Tencent</a> 
 	  </div>
     <div style="height:15px"></div>
