fix the link of test.py

--- a/blogs/memory_profiler.html
+++ b/blogs/memory_profiler.html
@@ -1037,7 +1037,7 @@ return y
 </code></pre>
 </pre>
 
-<p>给一个整体的例子哈， 见<a href="///D://code/git_index/wabyking.github.com/blogs/test.py">test.py</a><br />
+<p>给一个整体的例子哈， 见<a href="test.py">test.py</a><br />
 <pre><br />
 from memory_profiler import profile<br />
 @profile<br />
