--- a/blogs.html
+++ b/blogs.html
@@ -1015,7 +1015,7 @@ body .markdown-body
   }
 }
 </style><title>blogs</title></head><body><article class="markdown-body"><h1 id="blogs"><a name="user-content-blogs" href="#blogs" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Blogs</h1>
-<p>@ <a href="///D://code/git_index/wabyking.github.com/index.html">Waby&rsquo;s Homepage</a></p>
+<p>@ <a href="https://wabyking.github.com/index.html">Waby&rsquo;s Homepage</a></p>
 <ul>
-<li><a href="///D://code/git_index/wabyking.github.com/blogs/memory_profiler.html">Python如何做内存监控-memory_profiler</a></li>
+<li><a href="blogs/memory_profiler.html">Python如何做内存监控-memory_profiler</a></li>
 </ul></article></body></html>
