--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	  </div>
     <div style="height:15px"></div>
     <div class="main">    
-    Benyou Wang is a Research Associate in <a href="https://www.tencent.com/zh-cn/index.html" target="_blank">Tencent</a> Shenzhen, China. Before joining Tencent in July. 2017, he has been a Research Assisstant at Tianjin University since Feb. 2017. Benyou received his Master degree in Feb. 2017 from School of Computer Science  and technology of Tianjin University, supervides by Professor <a href="http://www.open.ac.uk/people/ds7946">  Dawei Song </a> and  Doctor <a href="">  Peng Zhang </a>. Before that, he received a B.Sc degree from the huat in 2014. 
-    Benyou's research interests include (but not limited) information retrieval, natural language processing , machine learning and quantum mechanics. He is now working on many textual problems, models, algorithms and innovations. Particularly,
+    Benyou Wang is a NLP Research Engineer (titled with Research Associate in Tencent) in <a href="https://www.tencent.com/zh-cn/index.html" target="_blank">Tencent</a> Shenzhen, China. (Tencent is one of two biggest  companies in China with more than 40000 staffs, its market value  had  ever exceeded  Facebook in 2017).   Before joining Tencent in July. 2017, he has been a Research Assisstant at Tianjin University since Feb. 2017. Benyou received his Master degree in Feb. 2017 from School of Computer Science  and technology of Tianjin University, supervides by Professor <a href="http://www.open.ac.uk/people/ds7946">  Dawei Song </a> and  Doctor <a href="http://cs.tju.edu.cn/faculty/zhangpeng/">  Peng Zhang </a>. Before that, he received a B.Sc degree from the huat in 2014. 
+    Benyou's research interests include (but not limited) information retrieval, natural language processing, machine learning and quantum mechanics. He is now working on many textual problems, models, algorithms and innovations. Particularly,
     <ul>
 
     <li class="pub">Deep Learning for NLP (e.g. Question Answering, Image caption)</li>
@@ -42,17 +42,17 @@
     My work on question answering and query expansion has been part of many Tencent products and services, including Tencent Cloud, Tencent HR customer service. And some work about Q-zone short vedio stream Recomendation  will be deployed latter.
     </div>
     <br/>
-
+<!-- 
     <div class="main">
     		Recently, we try to use extra CCG syntax information for image caption. Before this we have tried  joint task of image caption and machine translation in a cross-language, in which  decoder is shared  while differs in encoder-side (image or a cross language).
-    </div>
+    </div> -->
     
     <div style="height:2px"></div>
     <h3 style="padding-left:5%">News</h3>
     <div class="main">
     <ul>
     <li style="color:black; font-size:14pt; padding-bottom:5px">Please send me emails (wabywang@tencent.com)  if you are interested in my work.</li>
-    <li >We tries to build a general <a href="https://github.com/wabyking/TextClassificationBenchmark"> benchmark </a> for <b> text classficaion in Pytorch </b>. This benchmark is avaiable for CPU/GPU, Python2/Python3 and Pytorch 0.2/0.3. IMDB/TREC/SST dataset have been  verified, and more dataset is expected. Welcome for any issues and contribution, please contact me. </li>
+    <li >We  are trying to build a general <a href="https://github.com/wabyking/TextClassificationBenchmark"> benchmark </a> for <b> text classficaion in Pytorch </b>. This benchmark is avaiable for CPU/GPU, Python2/Python3 and Pytorch 0.2/0.3. IMDB/TREC/SST dataset have been  verified, and more dataset is expected. Welcome for any issues and contribution, please contact me. </li>
     <li>Our new book will be published by <a href="http://www.tup.tsinghua.edu.cn/index.html"> Tsinghua University Press </a> next year</li>
     <li style="color:red"> Our  paper <b> End-to-End Quantum-like Language Models with Application to Question Answering </b> has been accepted by <a href="https://aaai.org/Conferences/AAAI-18/" target="_blank"> AAAI 2018. </a> </li>
     <li style="color:black">Our oral paper <a href="https://aaai.org/Conferences/AAAI-18/"> <b> IRGAN: A Minimax Game for Unifying Generative and Discriminative Information Retrieval Models </b> </a> won <a href="http://sigir.org/sigir2017/program/awards/"> <b> Best Paper Award Honourable Mentions  </b> </a> in  <a href="http://sigir.org/sigir2017/"> SIGIR 2017 </a></li>
@@ -93,30 +93,45 @@
 
 	<h3>Journals</h3>
 	<ol>
-	<li class="pub">Li Jinfei. Wu Yue, Zhang Peng, Song Dawei, <b>Wang Benyou</b>. Learning to diversify web search results with a Document Repulsion Model. <b>Information Sciences</b>, 411, 136-150. 2017. (factor : 4.832)</li>
-	<li class="pub">Zhang Shengnan, Hou Yuexian, <b>Wang Benyou</b>, Song Dawei.  Regularizing Neural Networks via Retaining Confident Connections. <b>Entropy </b>, 19(7), 313. 2017. (factor : 1.821</b>)</li>
-	<li class="pub"><b>Wang Benyou</b>, Zhang Peng, Li Jinfei, Song Dawei, Hou Yuexian,  Shang Zhenguo.  Exploration of quantum interference in document relevance judgement discrepancy. <b>Entropy</b> , 18(4), 144. 2016. (factor : 1.821</b>)</li>
-	<li class="pub">Zhang Peng, Li Jinfei, <b>Wang Benyou</b>, Zhao Xiaochao, Song Dawei, Hou Yuexian, Melucci, M.  A Quantum Query Expansion Approach for Session Search. <b>Entropy</b> , 18(4), 146.2016.  (factor : 1.821</b>)</li>
+	<li class="pub">Li Jinfei. Wu Yue, Zhang Peng, Song Dawei, <b>Wang Benyou</b>. <a href="http://www.sciencedirect.com/science/article/pii/S0020025517307363" >Learning to diversify web search results with a Document Repulsion Model. </a> <b>Information Sciences</b>, 411, 136-150. 2017. (factor : 4.832)</li>
+	<li class="pub">Zhang Shengnan, Hou Yuexian, <b>Wang Benyou</b>, Song Dawei.  <a href=http://www.mdpi.com/1099-4300/19/7/313/pdf> Regularizing Neural Networks via Retaining Confident Connections. </a>   <b>Entropy </b>, 19(7), 313. 2017. (factor : 1.821</b>)</li>
+	<li class="pub"><b>Wang Benyou</b>, Zhang Peng, Li Jinfei, Song Dawei, Hou Yuexian,  Shang Zhenguo. <a href="http://www.mdpi.com/1099-4300/18/4/144/pdf"> Exploration of quantum interference in document relevance judgement discrepancy. </a> <b>Entropy</b> , 18(4), 144. 2016. (factor : 1.821</b>)</li>
+	<li class="pub">Zhang Peng, Li Jinfei, <b>Wang Benyou</b>, Zhao Xiaochao, Song Dawei, Hou Yuexian, Melucci, M. <a href="http://www.mdpi.com/1099-4300/18/4/146/pdf"> A Quantum Query Expansion Approach for Session Search. </a> <b>Entropy</b> , 18(4), 146.2016.  (factor : 1.821</b>)</li>
 
 	</ol>
 	
 	<h3>Conferences</h3>
 	<ol>
-	<li class="pub"> End-to-End Quantum-like Language Models with Application to Question Answering, accepted, <b>AAAI 2018 </b></li>
-	<li class="pub">Wang Jun, Yu Lantao, Zhang Weinan, Gong Yu, Xu Yinghui, <b>Wang, Benyou</b> , Zhang Peng, Zhang Dell. IRGAN: A Minimax Game for Unifying Generative and Discriminative Information Retrieval Models. <b>SIGIR 2017. Best Paper Award Honourable Mentions </b>.</li>
-	<li class="pub">Shang Zhenguo, Li Jinfei, Zhang Peng, Song Dawei, <b>Wang Benyou</b>. How Users Select Query Suggestions Under Different Satisfaction States?. CCIR 2017 (pp. 93-105),  Springer, Cham. July,2017.</li>
-	<li class="pub">Su Zhan, <b>Wang Benyou</b>, Niu Jiabin, Tao Shuchang, Zhang Peng, Song Dawei. Enhanced Embedding based Attentive Pooling Network for Answer Selection. NLPCC 2017</li>
-	<li class="pub"><b>Wang Benyou</b>, Niu Jiabing, Ma Liqun, Zhang Yuhua, Zhang Lipeng, Li Jinfei, Zhang Peng  Song, D. . A Chinese Question Answering Approach Integrating Count-Based and Embedding-Based Features. ICCPOL-NLPCC . December, 2016</li>	
-	<li class="pub">Chen Yongqiang, Zhang Peng, Song Dawei, <b>Wang Benyou</b>. A Real-Time Eye Tracking Based Query Expansion Approach via Latent Topic Modeling. <b> CIKM 2015 </b>(pp. 1719-1722). ACM. October, 2015</li>
+	<li class="pub"> Zhang Peng, Niu Jiabing, Su Zhan, <b> Wang Benyou </b> et al. <a href="papers/aaai-2018.pdf"> End-to-End Quantum-like Language Models with Application to Question Answering </a> <b>AAAI 2018 </b></li>
+	<li class="pub">Wang Jun, Yu Lantao, Zhang Weinan, Gong Yu, Xu Yinghui, <b>Wang Benyou</b> , Zhang Peng, Zhang Dell. <a href="https://arxiv.org/pdf/1705.10513.pdf"> IRGAN: A Minimax Game for Unifying Generative and Discriminative Information Retrieval Models. </a> <b>SIGIR 2017. Best Paper Award Honourable Mentions </b>.</li>
+	<li class="pub">Shang Zhenguo, Li Jinfei, Zhang Peng, Song Dawei, <b>Wang Benyou</b>. <a href="https://link.springer.com/chapter/10.1007/978-3-319-68699-8_8">How Users Select Query Suggestions Under Different Satisfaction States? </a> CCIR 2017 (pp. 93-105),  Springer, Cham. July,2017.</li>
+	<li class="pub">Su Zhan, <b>Wang Benyou</b>, Niu Jiabin, Tao Shuchang, Zhang Peng, Song Dawei. <a href="papers/nlpcc2017.pdf">Enhanced Embedding based Attentive Pooling Network for Answer Selection. </a> NLPCC 2017</li>
+	<li class="pub"><b>Wang Benyou</b>, Niu Jiabing, Ma Liqun, Zhang Yuhua, Zhang Lipeng, Li Jinfei, Zhang Peng  Song, D. . <a href="https://link.springer.com/chapter/10.1007/978-3-319-50496-4_88"> A Chinese Question Answering Approach Integrating Count-Based and Embedding-Based Features. </a> ICCPOL-NLPCC . December, 2016</li>	
+	<li class="pub">Chen Yongqiang, Zhang Peng, Song Dawei, <b>Wang Benyou</b>. <a href="https://dl.acm.org/citation.cfm?id=2806602"> A Real-Time Eye Tracking Based Query Expansion Approach via Latent Topic Modeling. </a> <b> CIKM 2015 </b>(pp. 1719-1722). ACM. October, 2015</li>
 	</ol>	
     <!-- </div> -->
+
+  <h3>Books</h3>
+  <ol>
+  <li class="pub" > Huang Xin, Wei zhao, <b>Wang Benyou</b>, Rui Zhao. Recommendation System and Deep Learnning, Tsinghua University Press, in Chinese, to be appear. Focusing on the chapter Learn to rank and Generative Adversarial Nets(GAN) for Recommendation</li>
+  </ol> 
+
+
+    <h3>Under submission</h3>
+  <ol>
+      <li class="pub" href="papers/MultiTask_ImageCaption.pdf" > Wei zhao, <b>Wang Benyou</b>, et al. <a href="papers/MultiTask_ImageCaption.pdf"> A Multi-task Learning Approach for Image Captioning </a>, NAACL 2018, under review </li>
+      <li class="pub" href="papers/~.pdf" > Wei zhao, <b>Wang Benyou</b>, et al. <a href="https://arxiv.org/pdf/1712.09059.pdf"> Leveraging Long and Short-term Information in Content-aware Movie Recommendation </a>, in Arxiv </b></li>
+  </ol> 
 
   
      <h3 >Invited Talks</h3>
 <!--  <div class="main"> -->
   <ol>
+  <li class="pub"><a href="talks/quantumqa.pdf"> Quanum Language Model for QA </a> : Quantum Penguin, Tencent, to appear </li>
   <li class="pub"> <a href="talks/chatbot.pdf"> ChatBot in DSNO </a> : Apartment of product for instant communication,  SNG, Tencent  </li>
-  <li class="pub"><a href="talks/quantumqa.pdf"> Quanum Language Model for QA </a> : Quantum Penguin, Tencent </li>  
+  <li class="pub">  Detail of our ChatBot  : Apartment of product for instant communication,  SNG, Tencent  </li>
+   <li class="pub">  Progress of our ChatBot  :  the only non-leader 15-min Speaker in Center of Data Application, SNG, Tencent  </li>
+    
     </ol>
     <!-- </div> -->
 
@@ -125,7 +140,7 @@
     <h3 >Industrial Projects</h3>
 <!-- 	<div class="main"> -->
 	<ol>
-	<li class="pub"> <a href="https://cloud.tencent.com/product/xiaowei"> AI chatbot: Customer Service Robot </a> in Tencent Cloud. 2017.</li>
+	<li class="pub"> <a href="https://cloud.tencent.com/product/xiaowei"> AI chatbot: Customer Service Robot </a> in Tencent Cloud. 2017. With many traditional IR (inforamtion retrieval ) practice and deep learnning application</li>
 	<li class="pub">Modelling short-term interset user-profile for <a href="https://qzone.qq.com/"> Qzone short </a> vedio recomendation.</li>	
     </ol>
     <!-- </div> -->
@@ -133,14 +148,16 @@
     <h3 >Open-Source code</h3>
 <!-- 	<div class="main"> -->
 	<ol>
-	<li class="pub"> End2end Quantum Language Model for Question Answering.  <a href="https://github.com/shuishen112/quantum-qa"> code</a></li>
-	<li class="pub"> IRGAN: Generative Adversarial Nets for Question Answering.  <a href="https://github.com/geek-ai/irgan"> code</a></li>
-	<li class="pub"> CNN Language Model, multi-GPU version in TensorFlow.  <a href="https://github.com/wabyking/Gated_CNN_for_language_Modeling"> code</a></li>
-	<li class="pub"> General document-based Question Answering, CNN/RNN with Attention and positional embedding. <a href="https://github.com/shuishen112/pairwise-rnn"> code</a></li>
+  <li class="pub"> <a href="https://github.com/geek-ai/irgan">  IRGAN: Generative Adversarial Nets for Question Answering.</a> : with more than 270 stars</li>
+  <li class="pub"> <a href="https://github.com/wabyking/TextClassificationBenchmarkInPytorch">  A new Text Classification Benchmark in PyTorch </a> : in pogress, have earned 24 stars until now</li>
+
+	<li class="pub">  <a href="https://github.com/shuishen112/quantum-qa">  End2end Quantum Language Model for Question Answering.  </a></li>	
+	<li class="pub"> <a href="https://github.com/wabyking/Gated_CNN_for_language_Modeling">  CNN Language Model  </a> , multi-GPU version in TensorFlow.</li>
+	<li class="pub"> <a href="https://github.com/shuishen112/pairwise-rnn">  General document-based Question Answering </a>, CNN/RNN with Attention and positional embedding.</li>
 	</ol>
 	<!-- </div> -->
    
-  <h3>Related Project</h3>
+<!--   <h3>Related Project</h3>
   <ol> 
   <li>
    Quantum Information Access and Retrieval Theory (QUARTZ),1/2017 - 12/2020, EU Horizon 2020 Marie-Curie H2020 Innovative Training Network (ITN)
@@ -153,7 +170,7 @@
   <li> Exploratory Search: Dynamic Relevance Modeling, 2014/01-2016/12. Research Fund for Doctoral Program of Higher Education of china, No. 20130032120044</li>
 
   </ol>
-
+ -->
 
    
     <p>Thanks for your reading, for more information <a href="life.html">here </a></p>
