--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
 
   <h3>Books</h3>
   <ol>
-  <li class="pub" > Huang Xin, Wei zhao, <b>Wang Benyou</b>, Rui Zhao. Recommendation System and Deep Learnning, Tsinghua University Press, in Chinese, to be appear. Focusing on the chapter Learn to rank and Generative Adversarial Nets(GAN) for Recommendation</li>
+  <li class="pub" > Huang Xin, Wei zhao, <b>Wang Benyou</b>, Rui Zhao. Recommendation System and Deep Learnning, Tsinghua University Press, in Chinese, to be appear. Focusing on the chapters related  "Learn to rank" and "Generative Adversarial Nets(GAN) for Recommendation" </li>
   </ol> 
 
 
     <h3>Under submission</h3>
   <ol>
-      <li class="pub" href="papers/MultiTask_ImageCaption.pdf" > Wei zhao, <b>Wang Benyou</b>, et al. <a href="papers/MultiTask_ImageCaption.pdf"> A Multi-task Learning Approach for Image Captioning </a>, NAACL 2018, under review </li>
-      <li class="pub" href="papers/~.pdf" > Wei zhao, <b>Wang Benyou</b>, et al. <a href="https://arxiv.org/pdf/1712.09059.pdf"> Leveraging Long and Short-term Information in Content-aware Movie Recommendation </a>, in Arxiv </b></li>
+      <li class="pub" href="papers/MultiTask_ImageCaption.pdf" > Zhao Wei, <b>Wang Benyou</b>, et al. <a href="papers/MultiTask_ImageCaption.pdf"> A Multi-task Learning Approach for Image Captioning </a>, NAACL 2018, under review </li>
+      <li class="pub" href="papers/~.pdf" > Zhao Wei, <b>Wang Benyou</b>, et al. <a href="https://arxiv.org/pdf/1712.09059.pdf"> Leveraging Long and Short-term Information in Content-aware Movie Recommendation </a>, in Arxiv </b></li>
   </ol> 
 
   
