--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <div class="main">
     <ul>
     <li style="color:black; font-size:14pt; padding-bottom:5px">Please send me emails (wabywang@tencent.com)  if you are interested in my work.</li>
-    <li >We  are trying to build a general <a href="https://github.com/wabyking/TextClassificationBenchmark"> benchmark </a> for <b> text classficaion in Pytorch </b>. This benchmark is avaiable for CPU/GPU, Python2/Python3 and Pytorch 0.2/0.3. IMDB/TREC/SST dataset have been  verified, and more dataset is expected. Welcome for any issues and contribution, please contact me. </li>
-    <li>Our new book will be published by <a href="http://www.tup.tsinghua.edu.cn/index.html"> Tsinghua University Press </a> next year</li>
-    <li style="color:red"> Our  paper <b> End-to-End Quantum-like Language Models with Application to Question Answering </b> has been accepted by <a href="https://aaai.org/Conferences/AAAI-18/" target="_blank"> AAAI 2018. </a> </li>
+    <li  > <span style="color:red">We  are trying to build a general <a href="https://github.com/wabyking/TextClassificationBenchmark"> benchmark </a> for <b> text classficaion in Pytorch </b>. </span> This benchmark is avaiable for CPU/GPU, Python2/Python3 and Pytorch 0.2/0.3. IMDB/TREC/SST dataset have been  verified, and more dataset is expected. Welcome for any issues and contribution, please contact me. </li>
+    <li>Our new book "Recommendation System and Deep Learnning" (in Chinese) will be published by <a href="http://www.tup.tsinghua.edu.cn/index.html"> Tsinghua University Press </a> next year</li>
+    <li style="color:black"> Our  paper <b> End-to-End Quantum-like Language Models with Application to Question Answering </b> has been accepted by <a href="https://aaai.org/Conferences/AAAI-18/" target="_blank"> AAAI 2018. </a> </li>
     <li style="color:black">Our oral paper <a href="https://aaai.org/Conferences/AAAI-18/"> <b> IRGAN: A Minimax Game for Unifying Generative and Discriminative Information Retrieval Models </b> </a> won <a href="http://sigir.org/sigir2017/program/awards/"> <b> Best Paper Award Honourable Mentions  </b> </a> in  <a href="http://sigir.org/sigir2017/"> SIGIR 2017 </a></li>
 
     </ul>
