--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
   </ol> 
 
   
-     <h3 >Invited Talks</h3>
+     <h3 >Talks</h3>
 <!--  <div class="main"> -->
   <ol>
-  <li class="pub"><a href="talks/quantumqa.pdf"> Quanum Language Model for QA </a> : Quantum Penguin, Tencent, to appear </li>
+  <li class="pub"><a href="talks/quantumqa.pdf"> Quantum Language Model for QA </a> : Quantum Penguin, Tencent, to appear </li>
   <li class="pub"> <a href="talks/chatbot.pdf"> ChatBot in DSNO </a> : Apartment of product for instant communication,  SNG, Tencent  </li>
   <li class="pub">  Detail of our ChatBot  : Apartment of product for instant communication,  SNG, Tencent  </li>
    <li class="pub">  Progress of our ChatBot  :  the only non-leader 15-min Speaker in Center of Data Application, SNG, Tencent  </li>
@@ -140,7 +140,7 @@
     <h3 >Industrial Projects</h3>
 <!-- 	<div class="main"> -->
 	<ol>
-	<li class="pub"> <a href="https://cloud.tencent.com/product/xiaowei"> AI chatbot: Customer Service Robot </a> in Tencent Cloud. 2017. With many traditional IR (inforamtion retrieval ) practice and deep learnning application</li>
+	<li class="pub"> <a href="https://cloud.tencent.com/product/xiaowei"> Chatbot: Customer Service Robot </a> in Tencent Cloud. 2017. With many traditional IR (inforamtion retrieval ) practice and deep learnning application</li>
 	<li class="pub">Modelling short-term interset user-profile for <a href="https://qzone.qq.com/"> Qzone short </a> vedio recomendation.</li>	
     </ol>
     <!-- </div> -->
