--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div style="height:15px"></div>
     <div class="main">    
     Benyou Wang is a NLP Research Engineer (titled with Research Associate in Tencent) in <a href="https://www.tencent.com/zh-cn/index.html" target="_blank">Tencent</a> Shenzhen, China. (Tencent is one of two biggest  companies in China with more than 40000 staffs, its market value  had  ever exceeded  Facebook in 2017).   Before joining Tencent in July. 2017, he has been a Research Assisstant at Tianjin University since Feb. 2017. Benyou received his Master degree in Feb. 2017 from School of Computer Science  and technology of Tianjin University, supervides by Professor <a href="http://www.open.ac.uk/people/ds7946">  Dawei Song </a> and  Doctor <a href="http://cs.tju.edu.cn/faculty/zhangpeng/">  Peng Zhang </a>. Before that, he received a B.Sc degree from the <a href="http://en.huat.edu.cn/"> Huat </a> in 2014. 
-    
+
     Benyou's research interests include (but not limited) information retrieval, natural language processing, machine learning and quantum mechanics. He is now working on many textual problems, models, algorithms and innovations. Particularly,
     <ul>
 
@@ -53,7 +53,7 @@
     <div class="main">
     <ul>
     <li style="color:black; font-size:14pt; padding-bottom:5px">Please send me emails (wabywang@tencent.com)  if you are interested in my work.</li>
-    <li  > <span style="color:red">We  are trying to build a general <a href="https://github.com/wabyking/TextClassificationBenchmark"> benchmark </a> for <b> text classficaion in Pytorch </b>. </span> This benchmark is avaiable for CPU/GPU, Python2/Python3 and Pytorch 0.2/0.3. IMDB/TREC/SST dataset have been  verified, and more dataset is expected. Welcome for any issues and contribution, please contact me. </li>
+    <li  > <span style="color:black">We  are trying to build a general <a href="https://github.com/wabyking/TextClassificationBenchmark"> benchmark </a> for <b> text classficaion in Pytorch </b>. </span> This benchmark is avaiable for CPU/GPU, Python2/Python3 and Pytorch 0.2/0.3. IMDB/TREC/SST dataset have been  verified, and more dataset is expected. Welcome for any issues and contributions, please contact me. </li>
     <li>Our new book "Recommendation System and Deep Learnning" (in Chinese) will be published by <a href="http://www.tup.tsinghua.edu.cn/index.html"> Tsinghua University Press </a> next year</li>
     <li style="color:black"> Our  paper <b> End-to-End Quantum-like Language Models with Application to Question Answering </b> has been accepted by <a href="https://aaai.org/Conferences/AAAI-18/" target="_blank"> AAAI 2018. </a> </li>
     <li style="color:black">Our oral paper <a href="https://aaai.org/Conferences/AAAI-18/"> <b> IRGAN: A Minimax Game for Unifying Generative and Discriminative Information Retrieval Models </b> </a> won <a href="http://sigir.org/sigir2017/program/awards/"> <b> Best Paper Award Honourable Mentions  </b> </a> in  <a href="http://sigir.org/sigir2017/"> SIGIR 2017 </a></li>
