--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <div class="main">
 	      <a href="https://scholar.google.com/citations?user=Jk4vJU8AAAAJ&hl=zh-CN" target="_blank">@ Google Scholar</a> 
         &nbsp;&nbsp; &nbsp;   <a href="blogs.html" target="_blank">@ Blogs</a>  
-        &nbsp;&nbsp; &nbsp; <a href="https://www.tencent.com/zh-cn/index.html" target="_blank">@ Tencent</a> 
+        &nbsp;&nbsp; &nbsp; <a href="https://www.tencent.com/en-us/index.html" target="_blank">@ Tencent</a> 
 	  </div>
     <div style="height:15px"></div>
     <div class="main">    
-    Benyou Wang is a NLP Research Engineer (titled with Research Associate in Tencent) in <a href="https://www.tencent.com/zh-cn/index.html" target="_blank">Tencent</a> Shenzhen, China. (Tencent is one of two biggest  companies in China with more than 40000 staffs, its market value  had  ever exceeded  Facebook in 2017).   Before joining Tencent in July. 2017, he has been a Research Assisstant at Tianjin University since Feb. 2017. Benyou received his Master degree in Feb. 2017 from School of Computer Science  and technology of Tianjin University, supervides by Professor <a href="http://www.open.ac.uk/people/ds7946">  Dawei Song </a> and  Doctor <a href="http://cs.tju.edu.cn/faculty/zhangpeng/">  Peng Zhang </a>. Before that, he received a B.Sc degree from the <a href="http://en.huat.edu.cn/"> Huat </a> in 2014. 
+    Benyou Wang is a NLP Research Engineer (titled with Research Associate in Tencent) in <a href="https://www.tencent.com/zh-cn/index.html" target="_blank">Tencent</a> Shenzhen, China. (Tencent is one of two biggest  companies in China with more than 40000 staffs, its market value  had  ever exceeded  Facebook in 2017).   Before joining Tencent in July. 2017, he has been a Research Assisstant at Tianjin University since Feb. 2017. Benyou received his Master degree in Feb. 2017 from School of Computer Science  and technology of Tianjin University, supervised by Professor <a href="http://www.open.ac.uk/people/ds7946">  Dawei Song </a> and  Doctor <a href="http://cs.tju.edu.cn/faculty/zhangpeng/">  Peng Zhang </a>. Before that, he received a B.Sc degree from the <a href="http://en.huat.edu.cn/"> Huat </a> in 2014. 
 
     Benyou's research interests include (but not limited) information retrieval, natural language processing, machine learning and quantum mechanics. He is now working on many textual problems, models, algorithms and innovations. Particularly,
     <ul>
