--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	  </div>
     <div style="height:15px"></div>
     <div class="main">    
-    Benyou Wang is a NLP Research Engineer (titled with Research Associate in Tencent) in <a href="https://www.tencent.com/zh-cn/index.html" target="_blank">Tencent</a> Shenzhen, China. (Tencent is one of two biggest  companies in China with more than 40000 staffs, its market value  had  ever exceeded  Facebook in 2017).   Before joining Tencent in July. 2017, he has been a Research Assisstant at Tianjin University since Feb. 2017. Benyou received his Master degree in Feb. 2017 from School of Computer Science  and technology of Tianjin University, supervised by Professor <a href="http://www.open.ac.uk/people/ds7946">  Dawei Song </a> and  Doctor <a href="http://cs.tju.edu.cn/faculty/zhangpeng/">  Peng Zhang </a>. Before that, he received a B.Sc degree from the <a href="http://en.huat.edu.cn/"> Huat </a> in 2014. 
+    Benyou Wang is a NLP Research Engineer (titled with Research Associate in Tencent) in <a href="https://www.tencent.com/zh-cn/index.html" target="_blank">Tencent</a> Shenzhen, China. (Tencent is one of two biggest  companies in China with more than 40000 staffs, its market value  had  ever exceeded  Facebook in 2017).   Before joining Tencent in July. 2017, he has been a Research Assistant at Tianjin University since Feb. 2017. Benyou received his Master degree in Feb. 2017 from School of Computer Science  and technology of Tianjin University, supervised by Professor <a href="http://www.open.ac.uk/people/ds7946">  Dawei Song </a> and  Doctor <a href="http://cs.tju.edu.cn/faculty/zhangpeng/">  Peng Zhang </a>. Before that, he received a B.Sc degree from the <a href="http://en.huat.edu.cn/"> Huat </a> in 2014. 
 
     Benyou's research interests include (but not limited) information retrieval, natural language processing, machine learning and quantum mechanics. He is now working on many textual problems, models, algorithms and innovations. Particularly,
     <ul>
@@ -40,7 +40,7 @@
 	
 	<div style="height:5px"></div>
     <div class="main">
-    My work on question answering and query expansion has been part of many Tencent products and services, including Tencent Cloud, Tencent HR customer service. And some work about Q-zone short vedio stream Recomendation  will be deployed latter.
+    My work on question answering and query expansion has been part of many Tencent products and services, including Tencent Cloud, Tencent HR customer service. And some work about Q-zone short video stream Recommendation  will be deployed latter.
     </div>
     <br/>
 <!-- 
@@ -53,8 +53,8 @@
     <div class="main">
     <ul>
     <li style="color:black; font-size:14pt; padding-bottom:5px">Please send me emails (wabywang@tencent.com)  if you are interested in my work.</li>
-    <li  > <span style="color:black">We  are trying to build a general <a href="https://github.com/wabyking/TextClassificationBenchmark"> benchmark </a> for <b> text classficaion in Pytorch </b>. </span> This benchmark is avaiable for CPU/GPU, Python2/Python3 and Pytorch 0.2/0.3. IMDB/TREC/SST dataset have been  verified, and more dataset is expected. Welcome for any issues and contributions, please contact me. </li>
-    <li>Our new book "Recommendation System and Deep Learnning" (in Chinese) will be published by <a href="http://www.tup.tsinghua.edu.cn/index.html"> Tsinghua University Press </a> next year</li>
+    <li  > <span style="color:black">We  are trying to build a general <a href="https://github.com/wabyking/TextClassificationBenchmark"> benchmark </a> for <b> text classficaion in Pytorch </b>. </span> This benchmark is available for CPU/GPU, Python2/Python3 and Pytorch 0.2/0.3. IMDB/TREC/SST dataset have been  verified, and more dataset is expected. Welcome for any issues and contributions, please contact me. </li>
+    <li>Our new book "Recommendation System and Deep Learning" (in Chinese) will be published by <a href="http://www.tup.tsinghua.edu.cn/index.html"> Tsinghua University Press </a> next year</li>
     <li style="color:black"> Our  paper <b> End-to-End Quantum-like Language Models with Application to Question Answering </b> has been accepted by <a href="https://aaai.org/Conferences/AAAI-18/" target="_blank"> AAAI 2018. </a> </li>
     <li style="color:black">Our oral paper <a href="https://aaai.org/Conferences/AAAI-18/"> <b> IRGAN: A Minimax Game for Unifying Generative and Discriminative Information Retrieval Models </b> </a> won <a href="http://sigir.org/sigir2017/program/awards/"> <b> Best Paper Award Honourable Mentions  </b> </a> in  <a href="http://sigir.org/sigir2017/"> SIGIR 2017 </a></li>
 
@@ -65,9 +65,9 @@
     <h3 style="padding-left:5%">Professional Activities</h3>
     <div class="main">
     <ul>
-    		<li>  Original member of Quantum Penguin in Tencent, which trys to follow the advanced progress in the area of Quantum Computing.</li>
+    		<li>  Original member of Quantum Penguin in Tencent, which tries to follow the advanced progress in the area of Quantum Computing.</li>
     		<li>  Research Consultant in <a href="https://www.sogou.com/"> Sogou</a> for <a href="https://pinyin.sogou.com/"> Sogou Input Method </a>, the most popular Chinese Input Method. Focused in Deep Language Model especially build by CNN, and it have been deployed online, recently.</li>
-    		<li>  Research Inten in <a href="http://ling.cass.cn/"> Institute of Linguistics </a>,  <a href="http://casseng.cssn.cn/"> China Academy of Social Sciences </a> during 2015.8--2015.9 & 2016.4-2016.5, about combining Eye-tracking for IR and Linguistics/Speech, supervised by <a href="http://paslab.phonetics.org.cn/index.php/people/faculty/li_ai_jun/"> Aijun Li </a> and <a href="http://paslab.phonetics.org.cn/index.php/people/innovation_faculty/jia_yuan/"> Yuan Jia </a> </li>
+    		<li>  Research Intern in <a href="http://ling.cass.cn/"> Institute of Linguistics </a>,  <a href="http://casseng.cssn.cn/"> China Academy of Social Sciences </a> during 2015.8--2015.9 & 2016.4-2016.5, about combining Eye-tracking for IR and Linguistics/Speech, supervised by <a href="http://paslab.phonetics.org.cn/index.php/people/faculty/li_ai_jun/"> Aijun Li </a> and <a href="http://paslab.phonetics.org.cn/index.php/people/innovation_faculty/jia_yuan/"> Yuan Jia </a> </li>
 
     		<li>  Served as an Executive Committee  of <a href= "http://www.ccf.org.cn/"> CCF (China computer Federation) </a> Tianjin University Branch in 2015-2016. I am responsible for inviting famous scholars for communication, including Tie-yan Liu, Chengqing Zong and Yi Chang.</li>
 
@@ -114,7 +114,7 @@
 
   <h3>Books</h3>
   <ol>
-  <li class="pub" > Huang Xin, Wei zhao, <b>Wang Benyou</b>, Rui Zhao. Recommendation System and Deep Learnning, Tsinghua University Press, in Chinese, to be appear. Focusing on the chapters related  "Learn to rank" and "Generative Adversarial Nets(GAN) for Recommendation" </li>
+  <li class="pub" > Huang Xin, Wei zhao, <b>Wang Benyou</b>, Rui Zhao. Recommendation System and Deep Learning, Tsinghua University Press, in Chinese, to be appear. Focusing on the chapters related  "Learn to rank" and "Generative Adversarial Nets(GAN) for Recommendation" </li>
   </ol> 
 
 
@@ -141,16 +141,16 @@
     <h3 >Industrial Projects</h3>
 <!-- 	<div class="main"> -->
 	<ol>
-	<li class="pub"> <a href="https://cloud.tencent.com/product/xiaowei"> Chatbot: Customer Service Robot </a> in Tencent Cloud. 2017. With many traditional IR (inforamtion retrieval ) practice and deep learnning application</li>
-	<li class="pub">Modelling short-term interset user-profile for <a href="https://qzone.qq.com/"> Qzone short </a> vedio recomendation.</li>	
+	<li class="pub"> <a href="https://cloud.tencent.com/product/xiaowei"> Chatbot: Customer Service Robot </a> in Tencent Cloud. 2017. With many traditional IR (information retrieval ) practice and deep learning application</li>
+	<li class="pub">Modelling short-term interest  user-profile for <a href="https://qzone.qq.com/"> Qzone short </a> vedio recommendation.</li>	
     </ol>
     <!-- </div> -->
 
     <h3 >Open-Source code</h3>
 <!-- 	<div class="main"> -->
 	<ol>
-  <li class="pub"> <a href="https://github.com/geek-ai/irgan">  IRGAN: Generative Adversarial Nets for Question Answering.</a> : with more than 270 stars</li>
-  <li class="pub"> <a href="https://github.com/wabyking/TextClassificationBenchmarkInPytorch">  A new Text Classification Benchmark in PyTorch </a> : in pogress, have earned 24 stars until now</li>
+  <li class="pub"> <a href="https://github.com/geek-ai/irgan">  IRGAN: Generative Adversarial Nets for Question Answering.</a> : with more than 300 stars</li>
+  <li class="pub"> <a href="https://github.com/wabyking/TextClassificationBenchmarkInPytorch">  A new Text Classification Benchmark in PyTorch </a> : in progress, have earned more than 50 stars, yet we did not make any massive publicity</li>
 
 	<li class="pub">  <a href="https://github.com/shuishen112/quantum-qa">  End2end Quantum Language Model for Question Answering.  </a></li>	
 	<li class="pub"> <a href="https://github.com/wabyking/Gated_CNN_for_language_Modeling">  CNN Language Model  </a> , multi-GPU version in TensorFlow.</li>
