--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
     <h3>Without peer-review</h3>
   <ol>
    <!--   <li class="pub" href="papers/MultiTask_ImageCaption.pdf" > Zhao Wei, <b>Wang Benyou</b>, et al. <a href="papers/MultiTask_ImageCaption.pdf"> A Multi-task Learning Approach for Image Captioning </a>, NAACL 2018, under review </li> -->
-      <li class="pub" href="papers/~.pdf" > Zhao Wei, <b>Wang Benyou</b>, et al. <a href="https://arxiv.org/pdf/1712.09059.pdf"> Leveraging Long and Short-term Information in Content-aware Movie Recommendation </a>, in Arxiv </b></li>
+      <li class="pub" href="papers/~.pdf" ><b>Wang Benyou*</b>, Zhao Wei*,  et al. <a href="https://arxiv.org/pdf/1712.09059.pdf"> Leveraging Long and Short-term Information in Content-aware Movie Recommendation </a>, in Arxiv </b></li>
+      <li class="pub" href="papers/~.pdf" ><b>Wang Benyou*</b>, Wang Li. et al. <a href="https://arxiv.org/abs/1802.03656"> TextZoo, a New Benchmark for Reconsidering Text Classification </a>, in Arxiv </b></li>
   </ol> 
 
   
