add talks of quantumnn and nnqlm

--- a/index.html
+++ b/index.html
@@ -131,10 +131,13 @@
      <h3 >Talks</h3>
 <!--  <div class="main"> -->
   <ol>
-  <li class="pub"><a href="talks/quantumqa.pdf"> Quantum Language Model for QA </a> : Quantum Penguin, Tencent, to appear </li>
+  
+  <li class="pub"><a href="talks/nnqlm.pdf"> Neural Network based Quantum Language Model for QA</a> : Tencent, "AAAI  2018 Spotlights Proseminar " </li>
+  <li class="pub"> <a href="talks/quantumnn.pdf"> Quantum-inspired Neural Network</a> : <a href="http://www.quartz-itn.eu/training/winter-school">Quartz Winter School 2018 </a>, Padova, Italy  </li>
   <li class="pub"> <a href="talks/chatbot.pdf"> ChatBot in DSNO </a> : Apartment of product for instant communication,  SNG, Tencent  </li>
+  <li class="pub"><a href="talks/quantumqa.pdf"> Quantum Language Model for QA </a> : Quantum Penguin, Tencent, to be appeared </li>
   <li class="pub">  Detail of our ChatBot  : Apartment of product for instant communication,  SNG, Tencent  </li>
-   <li class="pub">  Progress of our ChatBot  :  the only non-leader 15-min Speaker in Center of Data Application, SNG, Tencent  </li>
+  <li class="pub">  Progress of our ChatBot  :  the only non-leader 15-min Speaker in Center of Data Application, SNG, Tencent  </li>
     
     </ol>
     <!-- </div> -->
