--- a/life.html
+++ b/life.html
@@ -18,8 +18,25 @@
   </head>
   <body>
     <h1 style="padding-left:5%">Benyou Wang</h1>
+    <div class="main">
+	     <a href="index.html" target="_blank">Back to Homepage</a> 
+        &nbsp;&nbsp; &nbsp;   <a href="https://scholar.google.com/citations?user=Jk4vJU8AAAAJ&hl=zh-CN" target="_blank">@Google Scholar</a>  
+       
+	  </div>
+
     <div style="padding-left:5%">
-   
+
+
+   	      <h3 >Reports</h3>
+<!--  <div class="main"> -->
+
+
+        <ol>
+        <li class="pub">  新智元专访&nbsp;&nbsp;<a href="https://mp.weixin.qq.com/s/oCDlhzjOYTIhsr5JuoRCJQ">【SIGIR2017满分论文】IRGAN：大一统信息检索模型的博弈竞争.</a> </li>
+        <li class="pub">  Paperweekly&nbsp;&nbsp;<a href="https://mp.weixin.qq.com/s?__biz=MzIwMTc4ODE0Mw==&mid=2247487348&idx=1&sn=8ee8bf57418342a419fe73829cb14e75&chksm=96e9d0f4a19e59e288dcb105bd90b1e13f419ee7268ac69eba7cd6dac12e2e64aa84c56e5c07&mpshare=1&scene=1&srcid=0130mjKCPyhYcXPqH6S7PcmU#rd">【2017年度最值得读的AI论文 | NLP篇- 2017 年最值得读的十大论文.</a> </li>
+        <li class="pub">  Paperweekly&nbsp;&nbsp;<a href="http://mp.weixin.qq.com/s/Ps-9qwFfhoMgV1SZOVqClw">「推荐系统」领域近期有哪些值得读的论文？.</a> </li>
+        <li class="pub">  腾讯官方&nbsp;&nbsp;<a href="https://mp.weixin.qq.com/s/sWM2UL7B16mahH7Uj8FeEw">量子实验室科学家介绍实验室前身量子企鹅小组首篇AAAI论文.</a> </li>
+        </ol>
 
     <h3>MaraThon</h3>
  <!--    <div class="main"> -->
